--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
     "gatsby-source-contentful": "^2.3.28",
     "react": "^16.12.0",
@@ -21,6 +22,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "prettier": "2.0.5"
   },
   "repository": {
