--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.1",
+    "@contentful/rich-text-types": "^14.1.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
     "gatsby-source-contentful": "^2.3.28",
