--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-contentful": "^2.3.28",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-slick": "^0.27.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
