--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@contentful/rich-text-types": "^14.1.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
+    "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-source-contentful": "^2.3.28",
+    "gatsby-transformer-sharp": "^2.5.13",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-slick": "^0.27.0",
