--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@contentful/rich-text-types": "^14.1.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-remark-images-contentful": "^2.3.14",
     "gatsby-source-contentful": "^2.3.28",
