--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-remark-images-contentful": "^2.3.14",
     "gatsby-source-contentful": "^2.3.28",
     "gatsby-transformer-sharp": "^2.5.13",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-slick": "^0.27.0",
     "styled-components": "^5.1.1"
   },
