--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.27.0",
     "styled-components": "^5.1.1"
